CreateAndEnrolUser service finished.
